--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  h2:
+    console.enabled: true
+    console.path: /h2-console
+    console.settings.trace: false
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
