--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
   h2:
     console.enabled: true
     console.path: /h2-console
@@ -6,5 +9,15 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
-    username: sa
+    username: demo
     password:
+
+management:
+  endpoints:
+    web:
+      base-path: /manage
+      exposure:
+        include: '*'
+
+springdoc:
+  show-actuator: true
